아이디/비번 수정 완료 - 일정 진행중

--- a/static/css/common/base.css
+++ b/static/css/common/base.css
@@ -1,1095 +1,59 @@
-* {
-  list-style: none;
-  text-decoration: none;
-}
-
 html {
+  position: relative;
   font-size: 62.5%;
-  font-family: "Noto Sans CJK KR";
-  overflow-x: hidden;
 }
 
-input[type=date] {
-  font-family: "Noto Sans CJK KR";
-}
-
-body {
-  margin: 0;
-  background-color: #F5F5F5;
-}
-
-table {
-  border-spacing: 0;
-}
-
-textarea {
-  resize: none;
-}
-
-/* 스크롤바 설정*/
-html::-webkit-scrollbar {
-  position: absolute;
-  width: 1rem;
-}
-
-/* 스크롤바 막대 설정*/
-html::-webkit-scrollbar-thumb {
-  height: 17%;
-  background-color: #828282;
-  /* 스크롤바 둥글게 설정    */
-  border-radius: 10px;
-}
-
-/* 스크롤바 뒷 배경 설정*/
-html::-webkit-scrollbar-track {
-  background-color: #F5F5F5;
-}
-
-
-
-
-/*trp*/
-.trp {
-  position: relative;
-  display: flex;
+.cover_container {
+  padding-left: 20rem;
   width: 100vw;
-  min-width: 102.4rem;
-  min-height: 100vh;
-  height: auto;
-}
-
-
-
-
-
-/*trp sidemenu*/
-.Sidemenu {
-  position: fixed;
-  z-index: 10000;
-  width: 22rem;
   height: 100vh;
-  background-color: #1C1A4E;
-}
-
-
-
-/*sidemenuLogo*/
-.logoBox {
-  width: 100%;
-  height: 9.2rem;
-}
-
-.logoBox a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.logoBox a img {
-  width: 12.2rem;
-  aspect-ratio: 3 / 1;
-}
-
-
-
-
-/*sidemenuNav*/
-.sideMenuNav {
-  width: 100%;
-  height: auto;
-}
-
-.sideMenuNav1 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
-  padding: 0;
-}
-
-.nav1Box {
-  display: flex;
-  flex-direction: column;
-  width: calc(100% - 5rem);
-  height: auto;
-  min-height: 4.2rem;
-  padding: 0 2rem 0 3rem;
-}
-
-.nav1BoxMenu {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 4.2rem;
-  font-size: 1.6rem;
-  color: white;
-}
-
-.nav1BoxMenu img {
-  width: 1.7rem;
-}
-
-.nav1BoxMenuHaveDepth2 {
-  cursor: pointer;
-}
-
-.nav1BoxMenu img:nth-child(1) {
-  margin-right: auto;
-}
-
-.nav1BoxMenu img:nth-last-child(1) {
-  cursor: pointer;
-}
-
-.nav1BoxMenu div {
-  display: flex;
-  align-items: center;
-  width: calc(100% - 4.4rem);
-  height: 4.2rem;
-}
-
-.nonDepth2Menu {
-  display: flex;
-  align-items: center;
-  width: calc(100% - 3.1rem);
-  height: 4.2rem;
-}
-
-.sideMenuNav2Box {
-  overflow: hidden;
-  height: 0;
-}
-
-.sideMenuNav2 {
-  padding: 1rem 0 1rem 3rem;
-  height: auto;
-}
-
-.sideMenuNav2 a {
-  width: 100%;
-}
-
-.sideMenuNav2Link {
-  display: flex;
-  align-items: center;
-  width: calc(100% - 3rem);
-  height: 4.2rem;
-  font-size: 1.6rem;
-  color: white;
-}
-
-.sideMenuNav2Link:hover .sideMenuNav2Menu {
-  text-decoration: underline;
-  text-underline-position: under;
-}
-
-
-/* Manual */
-.manualArea {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 9.2rem;
-  padding: 1rem 0;
   box-sizing: border-box;
-}
-
-.manualArea a {
-  width: 90%;
-  height: 3rem;
-}
-
-.manualArea div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  border: 0.1rem solid white;
-  border-radius: 0.3rem;
-  color: white;
-  font-size: 1.6rem;
-  cursor: pointer;
-}
-
-.manualArea div:hover {
-  background-color: white;
-  color: #1C1A4E;
-}
-
-
-
-
-
-
-/*trpMainContainer*/
-.MainContainer {
-  position: relative;
-  left: 22rem;
-  display: flex;
-  flex-direction: column;
-  width: calc(100vw - 22rem);
-  min-width: 80.4rem;
-  height: 100%;
-  min-height: 100vh;
-}
-
-/*trp header*/
-.Header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: calc(100% - 6rem);
-  height: 5.9rem;
-  padding: 0 3rem;
-  border-bottom: 0.1rem solid #CFCFCF;
-  background-color: white;
-}
-
-/*trp header title*/
-.HeaderTitle {
-  font-size: 2.4rem;
-  font-weight: bold;
-  color: #191919;
-}
-
-.profile {
-  position: relative;
-  display: flex;
-  cursor: pointer;
-}
-
-.userName {
-  font-weight: 700;
-  margin-right: 0.2rem;
-}
-
-.profile span {
-  font-size: 1.6rem;
-  color: #191919;
-}
-
-.profileBox {
-  position: absolute;
-  top: 5.2rem;
-  right: 3rem;
-  z-index: 100;
-  display: none;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-start;
-  width: 12.2rem;
-  height: 10.2rem;
-  padding-left: 1.4rem;
-  background-color: white;
-  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.16);
-}
-
-.profileMenuCell {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  cursor: pointer;
-}
-
-.profileMenuCell img {
-  margin-right: 1rem;
-}
-
-.profileMenuName {
-  font-size: 1.2rem;
-  color: #191919;
-}
-
-.profileMenuCell:hover .profileMenuName {
-  text-decoration: underline;
-  text-underline-position: under;
-}
-
-
-
-
-
-
-
-/*trp contents container*/
-.mainContentsCentainer {
-  display: flex;
-  flex-direction: column;
-  width: calc(100% - 6rem);
-  height: calc(100% - 12rem);
-  min-height: calc(100vh - 12rem);
-  padding: 3rem;
-}
-
-.searchAreaBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: calc(100% - 2rem);
-  height: 5.8rem;
-  padding: 0 1rem;
-  margin-bottom: 2rem;
-  background-color: white;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.3rem;
-  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
-}
-
-.searchTool {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.searchAreaBox form {
-  height: 100%;
-}
-
-.searchToolCell {
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-
-.searchName {
-  font-size: 1.4rem;
-  font-weight: 700;
-  margin-right: 1rem;
-  color: #191919;
-}
-
-.searchToolinput {
-  height: 2.3rem;
-  padding: 0;
-  padding-left: 1rem;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.2rem;
-  font-size: 1.4rem;
-  color: #191919;
-  margin-right: 1rem;
-  outline: none;
-}
-
-.searchToolSelect {
-  height: 2.5rem;
-}
-
-.searchBtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 6.5rem;
-  height: 2.5rem;
-  border: none;
-  border-radius: 0.3rem;
-  background-color: #444444;
-  font-size: 1.4rem;
-  color: white;
-  cursor: pointer;
-}
-
-.contentsAreaBox {
-  width: calc(100% - 2rem);
-  height: auto;
-  padding: 1rem 1rem 0 1rem;
-  background-color: white;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.3rem;
-  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
-}
-
-.btnAreaBox {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 6.4rem;
-}
-
-.pagination {
-  width: 40rem;
-  height: 2.5rem;
-}
-
-.btnBox {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 21.5rem;
-  height: 2.5rem;
-  transform: translate(0, -50%);
-}
-
-.deletBtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 6.5rem;
-  height: 2.5rem;
-  margin-left: 1rem;
-  border: none;
-  border-radius: 0.3rem;
-  background-color: #444444;
-  font-size: 1.4rem;
-  color: white;
-  cursor: pointer;
-}
-
-.editBtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 6.5rem;
-  height: 2.5rem;
-  margin-left: 1rem;
-  border: none;
-  border-radius: 0.3rem;
-  background-color: #444444;
-  font-size: 1.4rem;
-  color: white;
-  cursor: pointer;
-}
-
-.createBtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 6.5rem;
-  height: 2.5rem;
-  margin-left: 1rem;
-  border: none;
-  border-radius: 0.3rem;
-  background-color: #0069D9;
-  font-size: 1.4rem;
-  color: white;
-  cursor: pointer;
-}
-
-
-
-
-
-
-
-/*modules*/
-
-/* 검색창 모듈 */
-.search-Container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 4rem;
-  margin-bottom : 2rem;
-  padding: 0 1rem;
-  border-radius: 0.2rem;
-  box-shadow: 0rem 0.1rem 0.4rem rgb(0 0 0 / 30%);
-  background-color: white;
-  box-sizing: border-box;
-}
-
-.search-Form{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 100%;
-}
-
-.search-Form_label{
-  font-size: 1.4rem;
-  margin-right: 2rem;
-}
-
-.search-Form_input{
-  width: 18rem;
-  height: 2.6rem;
-  padding-left: 1rem;
-  box-sizing: border-box;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.2rem;
-  outline: none;
-  font-family: "Noto Sans CJK KR";
-  font-size: 1.4rem;
-}
-
-.search-Form_search-btn{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 2.6rem;
-  margin-left: 2rem;
-  padding: 0 1.8rem;
-  border : none;
-  border-radius: 0.2rem;
-  font-size: 1.4rem;
-  color: white;
-  background-color: #444444;
-  cursor: pointer;
-}
-
-.popup-area-box{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-
-.popup-area-box_btn{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 2.6rem;
-  padding: 0 1.2rem;
-  border-radius: 0.2rem;
-  border: none;
-  background-color: #444444;
-  color: white;
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-
-
-
-/* 테이블 모듈 */
-.table-list{
-  width: 100%;
-  height: auto;
-  border-spacing: 0;
-}
-
-.table-list_head-tr{
-  width: 100%;
-  height: 3.6rem;
-  background-color: #444444;
-  color: white;
-  font-size: 1.4rem;
-}
-
-.table-list_head-tr_td{
-  height: 100%;
-  text-align: center;
-  box-sizing: border-box;
-}
-
-.table-list_body-tr{
-  width: 100%;
-  height: 3.6rem;
-  font-size: 1.4rem;
-}
-
-.table-list_body-tr:nth-child(odd){
-  background-color: white;
-}
-
-.table-list_body-tr:nth-child(even){
-  background-color: #EFEFEF;
-}
-
-.table-list_body-tr:nth-child(1) .td{
-  border-top: 0.1rem solid #D2D2D2;
-}
-
-.table-list_body-tr_td{
-  height: 100%;
-  text-align: center;
-  border-right: 0.1rem solid #D2D2D2;
-  border-bottom: 0.1rem solid #D2D2D2;
-  box-sizing: border-box;
-}
-
-.table-list_body-tr_td:nth-child(1){
-  border-left: 0.1rem solid #D2D2D2;
-}
-
-
-
-
-/* 스크롤 테이블 모듈 */
-.scrolling_table-list_header{
-  width: 100%;
-  height: 3.6rem;
-  background-color: #444444;
-}
-
-.scrolling_table-list_header .table-list{
-  width: calc(100% - 0.6rem);
-}
-
-.scrolling_table-list_body{
-  width: 100%;
   overflow-y: scroll;
-}
-
-.scrolling_table-list_body::-webkit-scrollbar{
-  width: 0.6rem;
-}
-
-.scrolling_table-list_body::-webkit-scrollbar-thumb{
-  height: 17%;
-  background-color: #444444;
-  border-radius: 1rem;  
-}
-
-.scrolling_table-list_body::-webkit-scrollbar-track{
-  background-color: #F5F5F5;
-}
-
-
-
-
-
-
-.inputModules {
-  height: 2.5rem;
-  padding-left: 1rem;
-  background-color: white;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.2rem;
-  box-sizing: border-box;
+  background-color: #EEEEEE;
   font-size: 1.4rem;
-  color: #191919;
 }
 
-.btnModules {
+.cover_container::-webkit-scrollbar {
+  width: 0;
+}
+
+
+
+
+
+
+/* 메인 */
+.main_Area {
+  position: relative;
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  background-color: #EEEEEE;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 6rem;
-  height: 2.5rem;
-  padding: 0 1.2rem;
-  border: none;
-  border-radius: 0.2rem;
-  font-size: 1.4rem;
-  color: white;
-  cursor: pointer;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.popupAreaModules {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1000;
-  display: none;
-  width: 100%;
-  height: 100%;
-}
-
-.popupBgModules {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.16);
-}
-
-.HomePopupAreaModules {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: none;
-  width: 100%;
-  height: 100%;
-}
-
-.HomePopupBgModules {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.16);
-}
-
-.HomePopupContainer {
-  position: fixed;
-  top: 50%;
-  left: calc(50% + 11rem);
-  display: flex;
-  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  width: 64rem;
-  min-height: 19.6rem;
-  background-color: white;
-  box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
-  transform: translate(-50%, -50%);
-}
-
-
-.HomePopupDataArea {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 100%;
-  height: calc(100% - 9.7rem);
-  padding: 4.2rem 3rem 0 3rem;
-  box-sizing: border-box;
-}
-
-.HomePopupDatainput {
-  width: 100%;
-  height: 2.6rem;
-  padding-left: 0.6rem;
-  padding-bottom: 0.1rem;
-  font-size: 1.4rem;
-  color: #191919;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.3rem;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.HomePopupDataCell {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 26rem;
-  height: 6rem;
-}
-
-.HomePopupDataCell .dateBox {
-  width: 100%;
-}
-
-.idBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 50rem;
-}
-
-.idchecker {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 7rem;
-  height: 2.4rem;
-  margin-left: 2rem;
-  border-radius: 0.2rem;
-  background-color: #444444;
-  font-size: 1.3rem;
-  color: white;
-  cursor: pointer;
-}
-
-.HomePopupContainer .editBtn {
-  background-color: #0069D9;
-}
-
-.homePopupBtnBox {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 4.8rem;
-  padding: 0 13.4rem;
-  box-sizing: border-box;
-}
-
-.HomeCloseBtn {
-  background-color: #444444;
-}
-
-.HomeEditBtn {
-  background-color: #0069D9;
-}
-
-.homePopupTitle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 4.8rem;
-  font-size: 1.6rem;
-  font-weight: 500;
-  border-bottom: 0.1rem solid #191919;
-}
-
-.HomePopupDataTitle {
-  font-size: 1.4rem;
-  color: #7A7A7A;
-}
-
-
-
-
-
-/* popup */
-.popupContainer {
-  position: fixed;
-  top: 50%;
-  left: calc(50% + 11rem);
-  z-index: 100;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 64rem;
-  min-height: 19.6rem;
-  background-color: white;
-  box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
-  transform: translate(-50%, -50%);
-}
-
-
-.popupHeader {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 3.6rem;
   padding-left: 2rem;
-  background-color: #444;
-  box-sizing: border-box;
-}
-
-.popupTitle {
-  font-size: 1.5rem;
-  color: white;
-}
-
-.popupBody {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  min-height: 16rem;
-  padding: 0 2rem;
   background-color: white;
   box-sizing: border-box;
+  box-shadow: 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.24);
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-.popupBodyDispatch {
-  min-height: 24rem;
-  border-left: 0.1rem solid black;
-  border-right: 0.1rem solid black;
-  border-bottom: 0.1rem solid black;
-}
-
-.popupSection {
+.main_container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 8.8rem;
-  padding: 3rem 0;
+  height: auto;
+  min-height: 100vh;
+  padding: 6.8rem 2rem 2rem 2rem;
   box-sizing: border-box;
-}
-
-.popupArticle {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 2.8rem;
-  margin-top: 2rem;
-}
-
-.popupArticle:nth-child(1) {
-  margin-top: 0;
-}
-
-.popupArticleLabel,
-.popupArticleDouble .popupArticleLabel {
-  width: 9rem;
-  text-align: left;
-  font-size: 1.4rem;
-}
-
-.popupArticleinput {
-  width: 50rem;
-  height: 2.4rem;
-  padding-left: 1rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.3rem;
-  outline: none;
-  box-sizing: border-box;
-}
-
-.PopupData {
-  display: flex;
-  align-items: center;
-  width: 27rem;
-  height: 2.4rem;
-  padding-left: 1rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.3rem;
-  font-size: 1.4rem;
-  outline: none;
-  box-sizing: border-box;
-}
-
-.PopupDataDouble {
-  width: 67rem;
-}
-
-.popupFooter {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  height: 7.2rem;
-  border-top: 0.1rem solid #CDCDCE;
-  box-sizing: border-box;
-}
-
-.popupFooter .closeBtn {
-  position: static;
-  background-color: #444;
-}
-
-/* popupDouble */
-.popupContainerDouble {
-  width: 80rem;
-}
-
-.popupArticleBox {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 2.8rem;
-  margin-top: 2rem;
-}
-
-.popupArticleBox:nth-child(1) {
-  margin-top: 0;
-}
-
-.popupArticleDouble {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: calc(50% - 2rem);
-  height: 2.8rem;
-}
-
-.popupArticleDouble .popupArticleinput {
-  width: 27rem;
-  height: 2.4rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.3rem;
-  outline: none;
-}
-
-.popupArticleInputDouble {
-  width: 67rem;
-}
-
-.popupArticleFileDouble {
-  position: relative;
-  display: flex;
-  width: 27rem;
-}
-
-
-/* popupFile */
-.popupArticleFile {
-  position: relative;
-  display: flex;
-  width: 50rem;
-}
-
-.popupArticleFile label,
-.popupArticleFileDouble label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 9rem;
-  height: 2.6rem;
-  border-radius: 0.3rem 0 0 0.3rem;
-  background-color: #444444;
-  color: white;
-  font-size: 1.3rem;
-  box-sizing: border-box;
-  cursor: pointer;
-}
-
-.popupArticleFileDouble label {
-  width: 16rem;
-}
-
-.popupArticleFile input[type=text],
-.popupArticleFileDouble input[type=text] {
-  width: 41rem;
-  padding-left: 1rem;
-  padding-right: 2rem;
-  font-size: 1.4rem;
-  border: 0.1rem solid #CDCDCE;
-  border-left: none;
-  border-radius: 0 0.3rem 0.3rem 0;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.FileTextDouble {
-  width: 16rem;
-  padding-left: 1rem;
-  padding-right: 2rem;
-  font-size: 1.4rem;
-  border: 0.1rem solid #CDCDCE;
-  border-left: none;
-  border-radius: 0 0.3rem 0.3rem 0;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.popupArticleFile input[type=file],
-.popupArticleFileDouble input[type=file] {
-  display: none;
-}
-
-.fileDeleteBtn {
-  position: absolute;
-  top: 50%;
-  right: 1%;
-  transform: translate(0, -50%);
-  cursor: pointer;
-}
-
-.popupArticleFileDouble .fileDeleteBtn {
-  right: 2%;
-}
-
-.importantStar{
-  color: red;
-}
-/* <span class="importantStar">*</span> */
-
-
-
-
-
-
-
-
-
-
-@media all and (min-width:1460px) and (max-width: 1600px) {
-  html {
-    font-size: 52%;
-  }
-}
-
-@media all and (min-width:1024px) and (max-width: 1460px) {
-  html {
-    font-size: 46.8%;
-  }
 }
