--- a/static/css/common/module.css
+++ b/static/css/common/module.css
@@ -1,45 +1,259 @@
-.btn{
+/* 버튼 */
+.create_btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto;
-    height: 2.8rem;
-    padding: 0.4rem 1.6rem;
+    width: 6rem;
+    height: 2.6rem;
     border-radius: 0.3rem;
+    border: none;
     font-size: 1.4rem;
+    color: white;
+    background-color: #61B4E5;
     cursor: pointer;
 }
-/* background-color
-    검색 : #4E5869
-    등록 : #61B4E5
-    -hover : #0069D9
-    삭제 : #ED5565
-    -hover : #DC1E1E
-    엑셀 : #107C41
-    기타 : #4E5869
-*/
 
-.container{
-    box-shadow: 0.1rem 0.1rem 0.1rem rgb(65 69 73 / 30%), 0.1rem 0.3rem 0.1rem rgb(65 69 73 / 15%);
+.create_btn:hover {
+    background-color: #0069D9;
+}
+
+.delete_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    height: 2.6rem;
+    border-radius: 0.3rem;
+    border: none;
+    font-size: 1.4rem;
+    color: white;
+    background-color: #ED5565;
+    cursor: pointer;
+}
+
+.delete_btn:hover {
+    background-color: #DC1E1E;
+}
+
+.basic_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    height: 2.6rem;
+    border-radius: 0.3rem;
+    border: none;
+    font-size: 1.4rem;
+    color: white;
+    background-color: #4E5869;
+    cursor: pointer;
+}
+
+.excel_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    height: 2.6rem;
+    border-radius: 0.3rem;
+    border: none;
+    font-size: 1.4rem;
+    color: white;
+    background-color: #107C41;
+    cursor: pointer;
+}
+
+
+/* 인풋 */
+
+.basic_input,
+.basic_select {
+    width: 24rem;
+    height: 2.6rem;
+    padding: 0.1rem 0.4rem 0.1rem 0.6rem;
     background-color: white;
+    border: 0.1rem solid #ABABAB;
+    border-radius: 0.3rem;
+    font-size: 1.4rem;
     box-sizing: border-box;
 }
-/* 
-    검색창{
-        width: 100%;
-        height: 4.8rem;
-        padding: 0 2rem;
-    }
- */
 
- .search-input{
-    width: 26rem;
-    height: 2.8rem;
-    padding: 0.1rem 0 0.1rem 1rem;
-    border-radius: 0.5rem;
-    border: none;
-    outline: none;
-    background-color: #f1f3f4;
+.search_input{
+    background-color: #F1F3F4;
+    border: 0.1rem solid #CDCDCE;
+}
+
+.basic_file_box {
+    position: relative;
+    width: 24rem;
+    height: 2.6rem;
+    background-color: white;
+    border: 0.1rem solid #ABABAB;
+    border-radius: 0.3rem;
+    box-sizing: border-box;
+
+    /* 임시속성 */
+    margin-top: 1rem;
+}
+
+label[for=basic_file] {
+    position: absolute;
+    top: -0.1rem;
+    left: -0.1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7.2rem;
+    height: 2.6rem;
+    border-radius: 0.3rem;
+    font-size: 1.4rem;
+    color: white;
+    background-color: #4E5869;
+    cursor: pointer;
+}
+
+#basic_file {
+    display: none;
+}
+
+.basic_file_text{
+    position: absolute;
+    top: -0.1rem;
+    left: 7.1rem;
+    width: calc(100% - 9rem);
+    height: 2.6rem;
+    padding: 0.1rem 0.6rem;
+    background-color: transparent;
     box-sizing: border-box;
     font-size: 1.4rem;
- }
+    border: none;
+    outline: none;
+}
+
+.basic_file_delete_btn{
+    position: absolute;
+    top: 50%;
+    right: 0.4rem;
+    transform: translate(0, -50%);
+    cursor: pointer;
+}
+
+
+
+/* 컨테이너 */
+.basic_container{
+    width: 100%;
+    height: 4.2rem;
+    background-color: white;
+    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
+    border-radius: 0.3rem;
+}
+
+
+
+
+
+
+
+
+/* 팝업 */
+.basic_popup{
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    display: none;
+    width: calc(100% - 20rem);
+    height: 100vh;
+}
+
+.basic_popup_bg{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.basic_popup_box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60rem;
+    padding: 0 2rem;
+    background-color: white;
+    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
+    border-radius: 0.3rem;
+    box-sizing: border-box;
+}
+
+.basic_popup_main_header{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding-top: 0.4rem;
+    height: 3.8rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+    border-bottom: 0.1rem solid black;
+}
+
+.basic_popup_header{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding-top: 0.4rem;
+    height: 3.8rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    border-bottom: 0.1rem solid black;
+}
+
+.basic_popup_body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: calc(100% - 13rem);
+    padding: 2rem 0;
+}
+
+.popup_input_article{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 2.6rem;
+}
+
+.popup_input_article label{
+    text-align: justify;
+    font-size: 1.4rem;
+    width: 9rem;
+    line-height: 0;
+}
+.popup_input_article label::before,
+.popup_input_article label::after{
+    content: "";
+    display: inline-block;
+    width: 100%;
+}
+
+.essential_impact{
+    color: red;
+}
+
+.popup_input_article input{
+    width: calc(100% - 11rem);
+}
+
+.basic_popup_footer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 4.6rem;
+    border-top: 0.1rem solid #CDCDCE;
+}
