--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -1,591 +1,302 @@
-/* 검색 */
-.search-Container {
+/* 검색창 */
+.schdule_search {
+    display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 4.8rem;
+    padding: 0 2rem;
+    box-sizing: border-box;
 }
 
-.controllArea {
-    display: flex;
+.dispatch_search_form {
+    display: none;
     justify-content: flex-start;
     align-items: center;
 }
 
-.search-Form {
-    display: none;
+.dispatch_search_form label {
     margin-right: 2rem;
 }
 
-.search-Container form {
-    margin-right: 3rem;
-}
-
-.dayController {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 12.6rem;
-    height: 2.6rem;
-}
-
-.dayController svg {
-    cursor: pointer;
-}
-
-.todayBtn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 6rem;
-    height: 2.6rem;
-    border-radius: 0.2rem;
-    background-color: #444444;
-    font-size: 1.4rem;
-    color: white;
-    cursor: pointer;
-    margin-right: 1rem;
-}
-
-.prevBtn {
-    margin-right: 0.4rem;
-}
-
-.searchAreaSide {
-    display: flex;
-}
-
-.printArea {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 42rem;
-    margin-right: 2rem;
-}
-
-.addSchedule {
-    background-color: #0069D9;
+.dispatch_search_form .basic_btn {
     margin-left: 2rem;
 }
 
-.print,
-.alarm {
-    font-size: 1.4rem;
+.dispatch_print_form {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.dispatch_print_form .basic_btn {
     margin-right: 1rem;
 }
 
-.prinBtn {
+.dispatch_print_form .basic_btn:nth-last-child(1) {
+    margin-right: 0;
+}
+
+.print_route,
+.print_bus {
+    justify-content: space-around;
+    width: 7.2rem;
+    padding: 0 0.4rem;
+    box-sizing: border-box;
+}
+
+.bus_inspection {
+    width: 8.2rem;
+}
+
+
+
+/* 메인 */
+.schdule_main {
+    width: 100%;
+    height: auto;
+    margin-top: 2rem;
+}
+
+/* 달력 버튼영역 */
+.calender_btn_box {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 8rem;
-    height: 2.6rem;
-    font-size: 1.4rem;
-    color: white;
-    border-radius: 0.2rem;
-    background-color: #444;
-    cursor: pointer;
+    height: 4.8rem;
 }
 
-.morelonger {
-    width: 9rem;
+.calendar_switch_btn {
+    position: absolute;
+    top: 50%;
+    right: 2rem;
+    transform: translate(0, -50%);
+    justify-content: space-around;
+    width: 8.2rem;
+    padding: 0 0.4rem;
+    box-sizing: border-box;
 }
 
-.alarmArea {
+.calender_btn_box_date {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 9rem;
+    width: 20rem;
+    height: 3.2rem;
+    background-color: #F1F3F4;
+    border-radius: 0.5rem;
 }
 
-.vhicleCheck {
+.date_controll_Btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 2.6rem;
-    height: 2.6rem;
-    background-color: #B5B5B5;
-    border-radius: 0.2rem;
+    width: 3.2rem;
+    height: 3.2rem;
+    background-color: #4E5869;
+    border-radius: 0.5rem;
     cursor: pointer;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-/* calender */
-.contentsAreaBox {
-    position: relative;
-    width: 100%;
-    padding: 0;
-}
-
-.changeFormatBtn {
-    position: absolute;
-    top: 0.8rem;
-    right: 1rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 9rem;
-    height: 2.6rem;
-    padding: 0 0.4rem;
-    box-sizing: border-box;
-    font-size: 1.4rem;
-    color: white;
-    background-color: #0069D9;
-    border-radius: 0.2rem;
-    cursor: pointer;
-}
-
-.dateTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.2rem;
-    font-size: 1.6rem;
-}
-
-.calenderHaed {
+/* 달력 요일영역 */
+.calender_header {
     display: flex;
     align-items: center;
     width: 100%;
     height: 3.6rem;
+    background-color: #4E5869;
 }
 
-.calenderHaed div {
+.weekBox {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: calc(100%/7);
+    width: calc(100% / 7);
     height: 100%;
-    background-color: #444;
     color: white;
-    font-size: 1.4rem;
 }
 
-.calenderHaed div:nth-child(1) {
-    color: #DC1E1E;
+.weekBox_sunday {
+    color: #ED5565;
 }
 
-.calenderHaed div:nth-last-child(1) {
-    color: #0069D9;
+.weekBox_satday {
+    color: #61B4E5;
 }
 
-.calender {
+
+/* 달력 메인영역 */
+.calender_body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     width: 100%;
-    height: auto;
+    padding-left: 0.5rem;
+    padding-bottom: 0.5rem;
+    box-sizing: border-box;
 }
 
-.calenderDateBox {
+.calender_date_box {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: calc(100% - 2.4rem);
-    height: 16.6rem;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    border: 0.2rem solid white;
-    border-radius: 0.5rem;
-    box-shadow: 0rem 0.1rem 0.4rem rgb(0 0 0 / 30%);
-    cursor: pointer;
+    width: calc(100% - (4rem / 7));
+    aspect-ratio: 23 / 18;
+    padding: 0 0.5rem;
+    box-sizing: border-box;
+    margin: 0.5rem 0.5rem 0 0;
+    background-color: white;
+    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
+    border-radius: 0.3rem;
 }
 
-.selectDataBox {
-    border: 0.2rem solid #0069D9
+.not_this_month {
+    background-color: #F1F3F4;
 }
 
-.beforeMonth,
-.afterMonth {
-    background-color: #EFEFEF;
-}
-
-.date {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-    height: 2.2rem;
-    font-size: 1.4rem;
-}
-
-.date div {
+.calender_date_cell {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 2.2rem;
-    height: 2.2rem;
-    border-radius: 1.1rem;
+    width: 100%;
+    height: 3.6rem;
+    border-radius: 0.3rem;
 }
 
-.hiidenModuleBox {
+.today {
+    padding: 0.5rem 1rem;
+    background-color: #61B4E5;
+    color: white;
+    border-radius: 1.2rem;
+}
+
+
+/* 클론 스타일 */
+.cloneBox {
     display: none;
 }
 
-.basicContentesArea {
+/* 기본달력 */
+.calender_contants_box {
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: calc(100% - 4.6rem);
+    margin-top: 0.5rem;
+}
+
+.dispatch_cnt_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: calc((100% - 1rem)/10*3);
+    height: 100%;
+}
+
+.dispatch_check {
+    position: absolute;
+    top: -2.95rem;
+    right: 0;
+    cursor: pointer;
+}
+
+.regularly_cnt_cell,
+.order_cnt_cell {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: calc(100% - 4.2rem);
-    margin-top: 2rem;
+    height: calc((100% - 1rem)/2);
+    border: 0.1rem solid #CDCDCE;
+    border-radius: 0.3rem;
 }
 
-.orderContentesArea {
+.calender_schedule_Cell {
+    width: calc((100% - 1rem)/10*7);
+    height: 100%;
+    overflow-y: scroll;
+    border: 0.1rem solid #CDCDCE;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+
+.calender_schedule_Cell::-webkit-scrollbar {
+    width: 0.6rem;
+}
+
+.calender_schedule_Cell::-webkit-scrollbar-thumb {
+    height: 17%;
+    background-color: #4E5869;
+    border-radius: 1rem;
+}
+
+.calender_schedule_Cell::-webkit-scrollbar-track {
+    background-color: #F1F3F4;
+}
+
+.calender_schedule_Cell:hover {
+    background-color: #EFEFEF;
+}
+
+.empty_schedule_cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #CDCDCE;
+}
+
+/* 배차달력 */
+.calender_order_box {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: calc(100% - 0.6rem);
-    height: calc(100% - 2.7rem);
-    margin-top: 0.5rem;
-}
-
-.orderListBox {
     width: 100%;
-    height: calc(100% - 3rem);
-    border-top: 0.1rem solid #D2D2D2;
-    border-bottom: 0.1rem solid #D2D2D2;
-    overflow-y: scroll;
-    box-sizing: border-box;
+    height: calc(100% - 4.1rem);
 }
 
-.orderListBox::-webkit-scrollbar {
+.calender_order_sell {
+    width: 100%;
+    height: calc(100% - 3.8rem);
+    border-radius: 0.3rem;
+    border: 0.1rem solid #CDCDCE;
+    overflow-y: scroll;
+}
+
+.calender_order_sell::-webkit-scrollbar {
     width: 0.6rem;
 }
 
-.orderListBox::-webkit-scrollbar-thumb {
+.calender_order_sell::-webkit-scrollbar-thumb {
     height: 17%;
-    background-color: #828282;
+    background-color: #4E5869;
     border-radius: 1rem;
 }
 
-.orderListBox::-webkit-scrollbar-track {
-    background-color: #F5F5F5;
+.calender_order_sell::-webkit-scrollbar-track {
+    background-color: #F1F3F4;
 }
 
-.orderListCell {
+.calender_order_total {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 2.8rem;
-    font-size: 1.4rem;
-    padding: 0 1rem 0 0.6rem;
-    margin: 0.1rem 0;
+    padding: 0 0.6rem;
     box-sizing: border-box;
-    border-radius: 0.2rem;
-    box-shadow: 0rem 0.1rem 0.4rem rgb(0 0 0 / 30%);
-    cursor: pointer;
-}
-
-.orderListCell:hover{
-    background-color: #EFEFEF;
-}
-
-.filterTarget{
-    font-weight: 700;
-    border: 0.1rem solid black;
-}
-
-.totalBox {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 2.6rem;
-    margin-top: 0.4rem;
-    font-size: 1.4rem;
-    padding: 0 1rem 0 0.6rem;
-    box-sizing: border-box;
-    background-color: #EFEFEF;
-    border-radius: 0.2rem;
-}
-
-.dataCellBox{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-
-.dispatchDataBox{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 6rem;
-    height: 100%;
-}
-
-.dataCell {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: calc(50% - 0.5rem);
-    padding: 0.5rem;
-    font-size: 1.4rem;
-    border-radius: 0.2rem;
-    border: 0.1rem solid #D2D2D2;
-    /* box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.3); */
-    box-sizing: border-box;
-    cursor: pointer;
-}
-
-.dataCellCalender{
-    justify-content: flex-start;
-    width: calc(100% - 7rem);
-    height: 100%;
-}
-
-.calnderItem{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    overflow: hidden;
-    width: 100%;
-    height: 24%;
-    padding-left: 0.6rem;
-    padding-right: 0.4rem;
-    margin-top: 3%;
-    box-sizing: border-box;
-    border: 0.1rem solid #D2D2D2;
-    border-radius: 0.2rem;
-}
-
-.moreCalender{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 13%;
-    margin: 3% 0;
-    font-size: 1.2rem;
-    box-sizing: border-box;
-}
-
-.dataCell:hover {
-    background-color: #EFEFEF;
-}
-
-.dataTitleBox {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.regularlyData,
-.orderData{
-    font-size: 1.2rem;
-}
-
-.needDispatch{
-    padding: 0.1rem 0.5rem;
-    border-radius: 0.3rem;
-    background-color: #CDCDCE;
-}
-
-.dataTitleBox svg {
-    margin-right: 1rem;
-}
-
-.checkMark {
-    position: absolute;
-    top: -4.1rem;
-    right: 0.2rem;
-    cursor: pointer;
+    background-color: #F1F3F4;
 }
 
 
 
-
-
-
-
-
-
-/* 체크팝업 */
-.checkerCloseBtn {
-    background-color: #444;
-}
-
-.addChecker {
-    background-color: #0069D9;
-    margin-right: 1rem;
-}
-
-.checkerDataBox {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-    width: 27rem;
-    height: 2.4rem;
-    padding-left: 1rem;
-    padding-bottom: 0.2rem;
-    font-size: 1.4rem;
-    box-sizing: border-box;
-    border-bottom: 0.1rem solid #CDCDCE;
-}
-
-
-
-
-
-/* 일정등록 팝업 */
-.scheduleForm label {
-    width: 5rem;
-}
-
-.scheduleContents {
-    width: 56rem;
-}
-
-.scheduleDate {
-    width: 14rem;
-    margin-right: 42rem;
-}
-
-.addScheduleBtn {
-    background-color: #0069D9;
-}
-
-.scheduleCloseBtn {
-    background-color: #444;
-    margin-left: 1rem;
-}
-
-
-
-
-
-
-/* 정기점검 팝업 */
-.inspectionAlarm {
-    background-color: #444;
-}
-
-.inspectionCloseBtn {
-    background-color: #444;
-}
-
-.inspectionForm .scrolling_table-list_body {
-    height: 14.4rem;
-}
-
-.inspectionForm td:nth-child(1) {
-    width: 7%;
-}
-
-.inspectionForm td:nth-child(2),
-.inspectionForm td:nth-child(3),
-.inspectionForm td:nth-child(4) {
-    width: 31%;
-}
-
-.inspectionForm .table-list_body-tr{
-    cursor: pointer;
-}
-
-.inspectionForm .table-list_body-tr:hover{
-    background-color: #CDCDCE;
-}
-
-
-
-
-
-
-
-/* 일정목록 팝업 */
-.scheduleListForm{
-    width: 80rem;
-}
-
-.scheduleCreateForm{
-    padding-bottom: 0;
-    min-height: auto;
-    height: 6rem;
-}
-
-.scheduleCreateBox{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 3rem;
-}
-
-.scheduleCreateBox label{
-    font-size: 1.4rem;
-}
-
-.scheduleCreateBox input:nth-child(2){
-    width: 60rem;
-    height: 2.6rem;
-    padding-left: 1rem;
-    box-sizing: border-box;
-    border: 0.1rem solid #D2D2D2;
-    border-radius: 0.2rem;
-    outline: none;
-    font-family: "Noto Sans CJK KR";
-    font-size: 1.4rem;
-}
-
-.scheduleCreateBtn{
-    background-color: #0069D9;
-}
-
-.scheduleListCloseBtn {
-    background-color: #444;
-}
-
-.scheduleListDeleteBtn{
-    background-color: #444;
-    margin-right: 1rem;
-}
-
-.scheduleListForm .scrolling_table-list_body {
-    height: 14.4rem;
-}
-
-.scheduleListForm td:nth-child(1) {
-    width: 4%;
-}
-
-.scheduleListForm td:nth-child(2){
-    width: 7%;
-}
-
-.scheduleListForm td:nth-child(3){
-    width: 65%;
-}
-
-.scheduleListForm td:nth-child(4) {
-    width: 10%;
-}
-
-.scheduleListForm td:nth-child(5) {
-    width: 18%;
-}
-
-.scheduleListForm .scrolling_table-list_body td:nth-child(3){
-    text-align: left;
-    padding-left: 1rem;
-}
-
-.scheduleDeleteForm{
-    padding-bottom: 0;
-}
+/* 일정팝업 */
