--- a/templates/base.html
+++ b/templates/base.html
@@ -442,6 +442,8 @@
   <script src="{% static 'js/common/closePopup.js' %}"></script>
   <script src="{% static 'js/common/changeID.js' %}"></script>
   <script src="{% static 'js/common/changePW.js' %}"></script>
+  <script src="{% static 'js/common/essentail.js' %}"></script>
+  <script src="{% static 'js/common/allChecker.js' %}"></script>
   {% block script %}{% endblock %}
 
 </body>
